@@ -3,6 +3,7 @@ package com.example.demo;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
+import java.util.OptionalInt;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ExecutorService;
@@ -10,22 +11,21 @@ import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
-import java.util.function.Function;
+import java.util.function.IntFunction;
 import java.util.function.Predicate;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
-
 import com.example.demo.model.Task;
 import com.example.demo.model.Task2;
 import com.example.demo.service.TestInterface;
 
 public class ThreadPoolExample {
 	public static void main(String[] args) throws InterruptedException, ExecutionException {
+
 		ExecutorService executor = Executors.newFixedThreadPool(3);
 		ExecutorService executor2 = Executors.newCachedThreadPool();
-		
+
 		String st = null;
-		System.out.println("string: "+Optional.ofNullable(st).orElse("Unknown"));
+		System.out.println("string: " + Optional.ofNullable(st).orElse("Unknown"));
 
 		Callable<Integer> callableTask = () -> {
 			return 10;
@@ -77,26 +77,30 @@ public class ThreadPoolExample {
 		Supplier<ThreadExamples> s = ThreadExamples::new;
 		System.out.println(s.get().test());
 
-		Function<Integer, String> f = (num) -> "" + num;
+		// Function<Integer, String> f = num -> "" + num;
+		IntFunction<String> f = num -> "" + num;
 		System.out.println(f.apply(8));
 
 		List<Integer> values = List.of(1, 2, 3, 4, 5, 6, 7, 8, 9, 10);
 
 		List<Integer> squared = values.stream().distinct().filter(p).map(num -> num * num).sorted((a, b) -> b - a)
-				.collect(Collectors.toList());
+				.toList();
 		System.out.println(squared);
 
 		int sum = values.stream().mapToInt(Integer::intValue).sum();
+		OptionalInt max2 = values.stream().mapToInt(Integer::intValue).max();
 		int sum2 = values.stream().reduce(0, Integer::sum);
 		int max = values.stream().reduce(0, Integer::max);
 		System.out.println("sum: " + sum);
 		System.out.println("sum2: " + sum2);
 		System.out.println("max: " + max);
+		System.out.println("max2: " + max2);
 
 		List<String> words = List.of("python", "axe", "java");
 		Predicate<String> lengthGreaterThan3 = word -> word.length() > 3;
 		List<String> filteredAndUppercasedWords = words.stream().filter(lengthGreaterThan3).map(String::toUpperCase)
-				.collect(Collectors.toList());
+				.toList();
+		// .collect(Collectors.toList());
 		System.out.println(filteredAndUppercasedWords);
 		System.out.println(filteredAndUppercasedWords.get(0));
 		System.out.println(words.stream().filter(lengthGreaterThan3).findFirst());
@@ -104,7 +108,7 @@ public class ThreadPoolExample {
 		List<List<String>> listOfLists = Arrays.asList(Arrays.asList("a", "b", "c"), Arrays.asList("d", "e"),
 				Arrays.asList("f", "g", "h"));
 		// Flatten the lists into a single stream
-		List<String> flattenedList = listOfLists.stream().flatMap(List::stream).collect(Collectors.toList());
+		List<String> flattenedList = listOfLists.stream().flatMap(List::stream).toList();
 		System.out.println(flattenedList);
 
 		values.parallelStream().filter(p).forEach(System.out::println);
